Project

General

Profile

Actions

Bug #23872

closed

Deleting a pool with active watch/notify linger ops can result in seg fault

Added by Jason Dillaman about 6 years ago. Updated almost 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

#0  x86_64_fallback_frame_state (context=0x7f63457f3500, context=0x7f63457f3500, fs=0x7f63457f35f0) at ./md-unwind-support.h:58
#1  uw_frame_state_for (context=context@entry=0x7f63457f3500, fs=fs@entry=0x7f63457f35f0) at ../../../src/libgcc/unwind-dw2.c:1249
#2  0x00007f6369e82668 in _Unwind_Backtrace (trace=0x7f636a51f9e0 <backtrace_helper>, trace_argument=0x7f63457f37b0) at ../../../src/libgcc/unwind.inc:290
#3  0x00007f636a51fb4f in __GI___backtrace (array=array@entry=0x7f63457f39a8, size=size@entry=100) at ../sysdeps/x86_64/backtrace.c:110
#4  0x000055acb3568cd0 in ceph::BackTrace::BackTrace (s=0, this=0x7f63457f39a0) at /build/ceph-13.0.2-1703-gc19d0f7/src/common/BackTrace.h:23
#5  handle_fatal_signal (signum=11) at /build/ceph-13.0.2-1703-gc19d0f7/src/global/signal_handler.cc:117
#6  <signal handler called>
#7  0x0000000000000002 in ?? ()
#8  0x00007f6373c22ac9 in Context::complete (this=0x7f62c0020940, r=<optimized out>) at /build/ceph-13.0.2-1703-gc19d0f7/src/include/Context.h:77
#9  0x00007f6373c68a57 in Objecter::_linger_commit (this=0x55acb3e4a1c0, info=0x7f62c0037e30, r=-2, outbl=...) at /build/ceph-13.0.2-1703-gc19d0f7/src/osdc/Objecter.cc:592
#10 0x00007f6373c22ac9 in Context::complete (this=0x7f631801fee0, r=<optimized out>) at /build/ceph-13.0.2-1703-gc19d0f7/src/include/Context.h:77
#11 0x00007f6373c82c7f in Objecter::handle_osd_op_reply (this=this@entry=0x55acb3e4a1c0, m=m@entry=0x7f6330003350) at /build/ceph-13.0.2-1703-gc19d0f7/src/osdc/Objecter.cc:3533
#12 0x00007f6373c8983b in Objecter::ms_dispatch (this=0x55acb3e4a1c0, m=0x7f6330003350) at /build/ceph-13.0.2-1703-gc19d0f7/src/osdc/Objecter.cc:969
#13 0x00007f6373c8c9c2 in non-virtual thunk to Objecter::ms_fast_dispatch(Message*) () at /build/ceph-13.0.2-1703-gc19d0f7/src/osdc/Objecter.h:2119
#14 0x00007f636b15a736 in Messenger::ms_fast_dispatch (m=0x7f6330003350, this=0x55acb3dbf270) at /build/ceph-13.0.2-1703-gc19d0f7/src/msg/Messenger.h:638
#15 DispatchQueue::fast_dispatch (this=0x55acb3dbf3f0, m=m@entry=0x7f6330003350) at /build/ceph-13.0.2-1703-gc19d0f7/src/msg/DispatchQueue.cc:71
#16 0x00007f636b20f7ff in AsyncConnection::process (this=<optimized out>) at /build/ceph-13.0.2-1703-gc19d0f7/src/msg/async/AsyncConnection.cc:776
#17 0x00007f636b21e105 in EventCenter::process_events (this=this@entry=0x55acb3dc0450, timeout_microseconds=<optimized out>, timeout_microseconds@entry=30000000, 
    working_dur=working_dur@entry=0x7f63457f5478) at /build/ceph-13.0.2-1703-gc19d0f7/src/msg/async/Event.cc:412
#18 0x00007f636b220dbc in NetworkStack::<lambda()>::operator() (__closure=0x55acb3e1a918) at /build/ceph-13.0.2-1703-gc19d0f7/src/msg/async/Stack.cc:53
#19 std::_Function_handler<void(), NetworkStack::add_thread(unsigned int)::<lambda()> >::_M_invoke(const std::_Any_data &) (__functor=...) at /usr/include/c++/7/bits/std_function.h:316
#20 0x00007f636b5a6cff in execute_native_thread_routine () from /usr/lib/ceph/libceph-common.so.0
#21 0x00007f636abe76ba in start_thread (arg=0x7f63457fa700) at pthread_create.c:333
#22 0x00007f636a51141d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #23904: luminous: Deleting a pool with active watch/notify linger ops can result in seg faultResolvedPrashant DActions
Copied to RADOS - Backport #23905: jewel: Deleting a pool with active watch/notify linger ops can result in seg faultResolvedPrashant DActions
Actions #1

Updated by Jason Dillaman about 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Jason Dillaman about 6 years ago

Actions #3

Updated by Kefu Chai about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #23904: luminous: Deleting a pool with active watch/notify linger ops can result in seg fault added
Actions #5

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #23905: jewel: Deleting a pool with active watch/notify linger ops can result in seg fault added
Actions #6

Updated by Nathan Cutler almost 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF