osdc/Objecter: prevent double-invocation of linger op callback

Fixes: http://tracker.ceph.com/issues/23872
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 1bc6f31f8f5ce33176b8a346492b087728947a71)